--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -554,7 +554,7 @@ To sum up our struggles, we once more stress the fact that inventing specificati
 
 \section{Abstract the algorithm} \label{template}
 
-Having found a good specification of the problem, the next step in the process is to implement its solution.\footnote{If the problem were novel, the next step would of course be coming up with a solution, but because we're dealing with a well-researched problem with widely known solutions, we omit this step. Another thing is that, just like for specifications, there aren't very many bulletproof techniques for coming up with good algorithms.} The usual high-level idea behind quicksort (agnostic as to whether the thing being sorted is a list or an array) is usually presented somewhat like this:
+Having found a good specification of the problem, the next step in the process is to implement its solution.\footnote{If the problem were novel, the next step would of course be coming up with a solution, but because we're dealing with a well-researched problem with widely known solutions, we omit this step. Another thing is that, just like for specifications, there aren't very many bulletproof techniques for coming up with good algorithms -- only heuristics.} The usual high-level idea behind quicksort (agnostic as to whether the thing being sorted is a list or an array) is usually presented somewhat like this:
 
 \begin{itemize}
     \item If the list/array is empty, we're done.
@@ -569,7 +569,7 @@ The main difference between these two implementations is a discrepancy in their 
 
 \begin{listing}[H]
     \begin{minted}{Haskell}
-        qs :: (Ord a) => [a] -> [a]
+        qs :: Ord a => [a] -> [a]
         qs [] = []
         qs (h:t) = qs (filter (< h) t) ++ [h] ++ qs (filter (>= h) t)
     \end{minted}
@@ -618,26 +618,29 @@ The main difference between these two implementations is a discrepancy in their 
 
 We have to admit that the presentation is a bit skewed in favor of Haskell, because the definition of \m{filter} is omitted. However, \m{filter} is another two-liner, so even if it was included, the Haskell way of partitioning is still much more abstract than the C way. This is also mitigated by the fact that the second part of the last bullet point, ``putting the recursively sorted parts together'' is skewed in favor of C, because it's already included in the partitioning, whereas in Haskell, if we wanted to be fully explicit, we would have to inline the definition of \m{++}, another two-liner.
 
-The above details aren't that important, however. What matters is the conclusion we wanted to illustrate: the Haskell version looks much simpler (and it's way easier to judge its correctness) because it's much more abstract, in some sense. The C version, being much more concrete, isn't as friendly-looking.\footnote{I don't mean to imply that all imperative implementations of quicksort must be somehow inferior to all function implementations. I think that given language features such as higher-order functions and interfaces, which are missing from C, the imperative implementation could match the simplicity and elegance of the functional one.}
+The above details aren't that important, however. What matters is the conclusion we wanted to illustrate: the Haskell version looks much simpler (and it's way easier to judge its correctness) because it's much more abstract, in some sense. The C version, being much more concrete, isn't as friendly-looking.\footnote{I don't mean to imply that all imperative implementations of quicksort must be somehow inferior to all functional implementations. I think that given language features such as higher-order functions and interfaces, which are missing from C, the imperative implementation could match the functional one in simplicity and elegance.}
 
 Our formally correct implementation in Coq will necessarily look much scarier and be several times longer than the typical imperative implementation (because of all the correctness proofs being much longer than the algorithm itself), but will in the end be just as simple and beautiful as the Haskell implementation. The key to achieving this is a technique derived from the above observations on abstractness and concreteness.
 
 \concept{Implement an abstract template that captures the idea of the algorithm. You can ignore the matter of termination at first.}
 
-In our case, the ``idea of the algorithm'' corresponds to the four-point description of quicksort given at the beginning of the current section, but we will modify it a bit. We change the first bullet point to ``if the input list is short, sort it using some ad hoc method'' and in the third bullet point, we will partition the list into three sublists whose elements are less than, equal and greater than the pivot.
+In our case, the ``idea of the algorithm'' corresponds to the four-point description of quicksort given at the beginning of the current section, but we will modify it a bit. We change the first bullet point to ``if the input list is short, sort it using some ad hoc method'' (to allow various kinds of optimizations, like switching to insertion sort for short lists) and in the third bullet point, we will partition the list into three sublists whose elements are less than, equal and greater than the pivot (so that the user can choose whether he wants 2-way or 3-way quicksort).
 
-In the two-line Haskell implementation of quicksort, the head of the list is chosen as pivot and partitioning is done using \m{filter}. In our case, we will implement an ``abstract template'' in which pivot choice, partitioning and the ad hoc sorting of short lists, are relegated to being arguments provided by the user. In this way, the user can craft a version of quicksort tailed precisely to his needs.
+In the two-line Haskell implementation of quicksort, the head of the list is chosen as pivot and partitioning is done using \m{filter}. In our case, we will implement an ``abstract template'' in which pivot choice, partitioning and the ad hoc sorting of short lists, are all input arguments of the algorithm. In this way, the user can craft a version of quicksort tailed precisely to his needs.
 
-The second part of the concept/technique tells us that we can ``ignore the matter of termination at first''. At first sight this looks rather unrelated to the first party about ``abstract template'', but after closer inspection it's an important special case. Coq is a total language, which means that all recursive functions necessarily terminate. This raises the problem of termination checking: how does Coq know whether a function we're implementing is terminating? In most cases a simple syntactical check is enough, but in the general case the problem is undecidable and we have to prove termination manually.
+The second part of the concept/technique tells us that we can ``ignore the matter of termination at first''. At first glance this looks rather unrelated to the part about ``abstract template'', but after closer inspection it's an important special case.
 
-This usually means that a general recursive function is weaved of two closely knit parts: the algorithmic part (the algorithm) and the logical part (the termination proof).
+Coq is a total language, which means that all recursive functions necessarily terminate. This raises the problem of termination checking: how does Coq know whether a function we're implementing is terminating? In most cases a simple syntactical check is enough, but in the general case the problem is undecidable and we have to prove termination manually.
 
+Therefore an implementation of a general recursive function is usually weaved of two closely knit parts: the algorithmic part (the algorithm) and the logical part (the termination proof). These parts are inseparable: the algorithmic part is littered with proofs and the termination proof of course strongly depends on the algorithm's properties.
+
+In the next section we will see a technique that allows us to deal with these two parts separately and a Coq language feature that can automate this technique, but at present, in accordance with concept/technique \#2, we will ignore the matter of termination. A nice way to do this, recently introduced into Coq, is the option \m{Unset Guard Checking}, which can temporarily turn the termination checker off.
 
 
 
 % TODO: quicksort jako "space-efficient" tree-sort, czy też na odwrót: jak zaoszczędzić na konkatenacji list zamieniając quicksort w robienie drzewa - pewnie dopiero w kolejnym rozdziale
 
-% Hints about turning the termination checker off. Present an imperative version of quicksort and maybe the story about people not believing Hoare the implementation could work.
+% Hints about turning the termination checker off. 
 
 \section{Prove termination} \label{termination}
 
